--- a/extra/glib/build
+++ b/extra/glib/build
@@ -1,11 +1,12 @@
 #!/bin/sh -e
 
-: > fuzzing/meson.build
-
 export DESTDIR="$1"
+
+: > fuzzing/meson.build
 
 meson setup \
     -Dprefix=/usr \
+    -Dlibexecdir=/usr/lib \
     -Dlibmount=disabled \
     -Dinstalled_tests=false \
     -Ddefault_library=both \
@@ -13,6 +14,7 @@ meson setup \
     -Dtests=false \
     -Dlibelf=disabled \
     -Dnls=disabled \
+    -Dsysprof=disabled \
     build
 
 ninja -C build
