--- a/extra/intel-vaapi-driver/build
+++ b/extra/intel-vaapi-driver/build
@@ -1,8 +1,12 @@
 #!/bin/sh -e
 
-meson \
-    --prefix=/usr \
-    . output
+patch -p1 < wl_drm-optional.patch
+
+export DESTDIR="$1"
+
+meson setup \
+    -Dprefix=/usr \
+    output
 
 ninja -C output
 ninja -C output install
