--- a/extra/sqlite/build
+++ b/extra/sqlite/build
@@ -5,10 +5,8 @@ export CPPFLAGS="$CPPFLAGS -DSQLITE_ENABLE_COLUMN_METADATA"
 
 ./configure \
     --prefix=/usr \
-    --enable-threadsafe \
-    --enable-dynamic-extensions \
-    --enable-fts5 \
-    ac_cv_search_readline=no \
+    --fts5 \
+    --disable-readline
 
 make
 make DESTDIR="$1" install
