--- a/core/musl/build
+++ b/core/musl/build
@@ -1,9 +1,11 @@
 #!/bin/sh -e
 
+patch -p1 < iconv_fix_erroneous_input_validation.patch
+patch -p1 < iconv_harden_utf-8_output.patch
+patch -p1 < fix_malloc.patch
+
 # Uncomment if using valgrind or similar.
 # :>nostrip
-
-patch -p1 < fix_malloc.patch
 
 ./configure \
     --prefix=/usr \
