--- a/xorg/xlibre-server/build
+++ b/xorg/xlibre-server/build
@@ -3,6 +3,7 @@
 export DESTDIR="$1"
 
 patch -p1 < rootless_modesetting.patch
+patch -p1 < noxdmcp.patch
 
 # Disable tests.
 : > test/meson.build
@@ -23,7 +24,7 @@ meson setup \
     -Dglamor=true \
     -Dxorg=true \
     -Dxephyr=false \
-    -Dxdmcp=true \
+    -Dxdmcp=false \
     -Ddefault_font_path=/usr/share/fonts \
     output
 
