--- a/community/webkit2gtk/build
+++ b/community/webkit2gtk/build
@@ -14,6 +14,9 @@ if command -v clang; then
 	export CXX=clang++
 fi
 
+patch -p1 < noexecinfo.patch
+patch -p1 < JSCretfix.patch
+
 # fix unsupported -n or -h flag for sbase ln
 sed 's/ln -sfh/ln -sf/g' Source/WebCore/Scripts/generate-derived-sources.sh > _
 mv -f _ Source/WebCore/Scripts/generate-derived-sources.sh
@@ -78,7 +81,6 @@ cmake -G Ninja -B build \
     -DENABLE_WAYLAND_TARGET=OFF \
     -DUSE_AVIF=OFF \
     -DUSE_GSTREAMER_GL=ON \
-    -DUSE_GSTREAMER_TRANSCODER=ON \
     -DUSE_GTK4=OFF \
     -DUSE_JPEGXL=OFF \
     -DUSE_LCMS=OFF \
