--- a/community/libyaml/build
+++ b/community/libyaml/build
@@ -1,9 +1,7 @@
 #!/bin/sh -e
 
 ./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var
+    --prefix=/usr
 
 make
 make DESTDIR="$1" install
